edit: removed ==true in ternary

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <main>
                 <ul>
-                    <li v-for="object in todoList" :class="(object.done == true) ? 'task-done' : ''">
+                    <li v-for="object in todoList" :class="(object.done) ? 'task-done' : ''">
                         {{ object.text }}
                     </li>
                 </ul>
